Bug fix for illegalargument exception